--- a/style.css
+++ b/style.css
@@ -50,3 +50,53 @@ body{
     width: 100%;
 }
 
+#header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 80px;
+    background: #E3E6f3;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.06);
+}
+
+#navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.875rem;
+    list-style-type: none;
+}
+
+#navbar li a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    position: relative;
+
+}
+
+#navbar li a:hover{
+    color: #088178;
+    transition: 0.2s;
+}
+
+#navbar li a:hover,
+#navbar li a.active{
+    color: #088178;
+
+}
+
+#navbar li a.active:after,
+#navbar li a:hover::after
+{
+    content: "";
+    width:100%;
+    height: 3px;
+    background: #088178;
+    position: absolute;
+    border-radius: 15px;
+    bottom: -4px;
+    left: 2px;
+}
+
