--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ body{
     padding: 20px 80px;
     background: #E3E6f3;
     box-shadow: 0 5px 15px rgba(0,0,0,0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 #navbar{
@@ -73,7 +77,6 @@ body{
     font-weight: 600;
     color: #1a1a1a;
     position: relative;
-
 }
 
 #navbar li a:hover{
@@ -84,7 +87,6 @@ body{
 #navbar li a:hover,
 #navbar li a.active{
     color: #088178;
-
 }
 
 #navbar li a.active:after,
@@ -98,5 +100,41 @@ body{
     border-radius: 15px;
     bottom: -4px;
     left: 2px;
+}
+
+/* hero  */
+
+#hero{
+    background: url("./img/hero4.png");
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 25% right 0;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+#hero h4{
+    padding-bottom: 15px;
+}
+
+#hero h1{
+    padding-bottom: 15px;
+    color: #088178;
+}
+
+#hero button{
+    background-image: url(./img/button.png);
+    background-color: transparent;
+    color: #088178;
+    border: 0;
+    padding: 14px 80px 14px 65px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
 }
 
