Products section done

--- a/style.css
+++ b/style.css
@@ -102,6 +102,19 @@ body{
     left: 2px;
 }
 
+.shoping{
+    color: #088178;
+    padding: 6px 8px;
+    background-color: #d1d1d1c0;
+    border-radius: 50%;
+}
+
+.shoping:active{
+    transition: 0.3s ease;
+    background-color:#adadadc0 ;
+    transform: scale(1.2);
+}
+
 /* hero  */
 
 #hero{
@@ -196,3 +209,87 @@ body{
     background-color: #fff2e5;
 }
 
+
+
+#product1{
+    text-align: center;
+}
+
+#product1 .pro{
+    width: 23%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #cce7d0;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0,0,0,0.03);
+    margin: 15px 0;
+    transition: 0.2s ease;
+    position: relative;
+}
+
+#product1 .pro:hover{
+    box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
+}
+
+#product1 .pro img{
+    width: 100%;
+    border-radius: 20px;
+}
+
+#product1 .pro .des{
+    text-align: start;
+    padding: 10px 0;
+
+}
+
+#product1 .pro .des span{
+    color: #606063;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+#product1 .pro .des h5{
+    padding-top: 7px;
+    color: #1a1a1a;
+    font-size: 14px;
+}
+
+#product1 .pro .des i{
+    font-size: 12px;
+    color: rgb(243, 181, 25);
+}
+
+#product1 .pro .des h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #088178;
+
+}
+
+#product1 .pro .cart{
+   width: 40px;
+   height: 40px;
+
+    /* line-height: 40px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px ;
+    border-radius: 50px;
+    background-color: #ececec;
+    font-weight: 500;
+    color: #088178;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+}
+
+.pro-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
