--- a/style.css
+++ b/style.css
@@ -46,6 +46,19 @@ p{
     margin: 40px 0 ;
 }
 
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff2e5;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.3s;
+}
+
 body{
     width: 100%;
 }
@@ -291,5 +304,47 @@ body{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+}
 
+
+
+#banner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    background-image: url(./img/banner/b2.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+
+
+}
+
+#banner h4{
+    font-size: 16px;
+    color: #fff2e5;
+}
+
+#banner h2{
+    color: #fff2e5;
+    font-size: 30px;
+    padding: 10px 0;
+
+}
+
+
+#banner h2 span{
+    color: #ef3636;
+    font-size: 30px;
+    padding: 10px 0;
+    
+}
+
+
+#banner button:hover{
+    background: #088178;
+    color: #fff;
 }
